--- a/30-touchpad.conf
+++ b/30-touchpad.conf
@@ -2,5 +2,5 @@ Section "InputClass"
     Identifier "touchpad catchall"
     Driver "libinput"
     Option "Tapping" "on"
-    Option "NaturalScrolling" "true"
+    Option "NaturalScrolling" "false"
 EndSection
